# oireachtas-data-downloader

./: CMakeLists.txt  README.md  TODO.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
docs/: CMakeLists.txt  mainpage.md  odd.1.pod
include/odd/: odd.hpp
src/: CMakeLists.txt  OireachtasApi.cpp  OireachtasConf.cpp  OireachtasFilter.cpp  main.cpp  oddcli.cpp
